syntax = "proto3";
package pro.glide;
option go_package = "/pb";

import public 'google/protobuf/any.proto';

message CommMessage {
  int64 ver = 1;
  int64 seq = 2;
  string action = 3;
  optional google.protobuf.Any  data = 4;
  map<string, string> extra = 5;
}
